<resources>
    <!-- don't need to localization-->
    <string name="sp_key_type_select" translatable="false">spKeyTypeSelect</string>
    <string name="sp_key_call_name" translatable="false">spKeyCallName</string>
    <string name="sp_key_call_desc" translatable="false">spKeyCallDesc</string>
    <string name="sp_key_call_number" translatable="false">spKeyCallNumber</string>


    <!-- need to localization -->
    <string name="app_name">OneClick2DoAnything</string>
    <string name="action_main">Main</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_help">Help</string>
    <string name="menu_filter">Filter</string>

    <!-- common string -->
    <string name="refresh">Refresh</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="done">Done</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <!-- dialog message -->
    <string name="name_cant_null">The name can not be empty!</string>
    <string name="number_cant_null">The number can not be empty!</string>
    <string name="shortcut_create_success">Now you can check the home screen and enjoy it!</string>

    <!-- command settings-->
    <string name="command_type_name">Type</string>
    <string name="command_type_summary">The type of the command</string>
    <string name="command_type_select_title">Please select a type</string>
    <string-array name="command_type_names">
        <item>Call someone</item>
    </string-array>
    <!-- don't need to localization-->
    <string-array name="command_type_values" translatable="false">
        <item>command_type_call</item>
        <item>command_type_navi</item>
    </string-array>
    <string name="call_name">Name</string>
    <string name="call_desc">Description(not required)</string>
    <string name="call_number">Number</string>
    <string name="call_name_summary">The name of the shortcut</string>
    <string name="call_desc_summary">The description of the shortcut</string>
    <string name="call_number_summary">The number you want to call</string>
    <string name="call_avatar">Add a avatar for this number</string>

    <!-- feedback function -->
    <string name="feedback_title">Do you have something about this app to tell us? Write down your feedback please!</string>
    <string name="feedback_email">Your email:</string>
    <string name="feedback_cant_null">The feedback cant be empty</string>
    <string name="feedback_success">We have recevie your feedback.Thank You!</string>

    <!-- help -->
    <string name="help_content_desc">We will update more function.Just wait.</string>
    <string name="help_content_version">Version:1.0</string>
    <string name="help_content_email">Contact:kaiyangjia@163.com</string>
    <string name="help_content_website">Website:jiakaiyang.com</string>

</resources>
