<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_title"
        android:textSize="@dimen/text_size_page_title" />

    <EditText
        android:id="@+id/feedback_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedback_content"
        android:layout_marginTop="@dimen/common_item_divider"
        android:text="@string/feedback_email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_title"
        android:layout_marginTop="@dimen/common_item_divider" />


    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/next_btn_margin"
        android:text="@string/done" />

</RelativeLayout>